2019-12-10      Matthias Klose <doko@ubuntu.com>

	* libgm2/libm2cor/Makefile.am:  (libsubdir) corrected using
	  target_alias.
	* libgm2/libm2iso/Makefile.am:  (libsubdir) corrected using
	  target_alias.
	* libgm2/libm2log/Makefile.am:  (libsubdir) corrected using
	  target_alias.
	* libgm2/libm2min/Makefile.am:  (libsubdir) corrected using
	  target_alias.
	* libgm2/libm2pim/Makefile.am:  (libsubdir) corrected using
	  target_alias.
	* libgm2/libm2cor/Makefile.in:  regenerated.
	* libgm2/libm2iso/Makefile.in:  regenerated.
	* libgm2/libm2log/Makefile.in:  regenerated.
	* libgm2/libm2min/Makefile.in:  regenerated.
	* libgm2/libm2pim/Makefile.in:  regenerated.

2019-12-10      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* libgm2/libm2iso/RTco.c:  corrected include files
          for target building.

2019-12-09      Gaius Mulley <gaius.mulley@southwales.ac.uk>

	* libgm2/configure.ac:  remove reference to config dir.
          (ACX_NONCANONICAL_TARGET) removed.
	* libgm2/libm2cor/Makefile.in:  regenerated.
	* libgm2/libm2iso/Makefile.in:  regenerated.
	* libgm2/libm2log/Makefile.in:  regenerated.
	* libgm2/libm2min/Makefile.in:  regenerated.
	* libgm2/libm2pim/Makefile.in:  regenerated.
	* libgm2/configure.ac:  (LT_INIT) used instead of AM_PROG_LIBTOOL.
	* libgm2/libm2cor/Makefile.in:  regenerated.
	* libgm2/libm2iso/Makefile.in:  regenerated.
	* libgm2/libm2log/Makefile.in:  regenerated.
	* libgm2/libm2min/Makefile.in:  regenerated.
	* libgm2/libm2pim/Makefile.in:  regenerated.

2019-12-04      Matthias Klose <doko@ubuntu.com>

	* libgm2/Makefile.in:  regenerated.
	* libgm2/aclocal.m4:  regenerated from automake-1.15.1.
	* libgm2/libm2cor/Makefile.am:  added -version-info.
	* libgm2/libm2cor/Makefile.in:  regenerated.
	* libgm2/libm2iso/Makefile.am:  added -version-info.
	* libgm2/libm2iso/Makefile.in:  regenerated.
	* libgm2/libm2log/Makefile.am:  added -version-info.
	* libgm2/libm2log/Makefile.in:  regenerated.